--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <title>Blog Curso GIT</title>
 </head>
 <body>
-    <div>
-        <img src="img/Git-Icon-1788C.png">
+    <div class="bar">
+        <img class="logo "src="img/giticon.png">
         <h1>Blog Curso Git</h1>
     </div>
     <div>
