--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <img class="logo "src="img/giticon.png">
         <h1>Blog Curso Git</h1>
     </div>
+    <div>
+        aqui ira la publicidad
+    </div>
     <div class="container" id="content">
 
     </div>
